Update auth method for admin
